--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html aula 4</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <form>
+        <img src="https://www.opovo.com.br/reboot/includes/assets/img/logo_og.png" alt="">
         <label for="email">Email</label>
         <input id="email" type="email" placeholder="email@email.com" required>
         <label for="senha">Senha</label>
@@ -16,4 +22,5 @@
         <button type="submit">Enviar</button>
     </form>
 </body>
+
 </html>
